# usecase_upvc

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  code.c  compare.c  debug.c  dispatch.c  getgenome.c  getread.c  index.c  processread.c  readme.md  upvc.h  upvc_dpu.c  upvc_host.c  vartree.c  vcf.c
cmake_utils/: CMakeDpu.cmake  CMakeDpuPrepareConfigurationScript.cmake
common/inc/: common.h
dpu/: CMakeLists.txt  build_configuration.script  build_configuration_opt1.script  build_configuration_opt2.script  compile_commands.json
dpu/inc/: debug.h  dout.h  mutex_def.h  nodp.h  odpd.h  request.h  request_pool.h  result_pool.h  stats.h
dpu/src/: dout.c  nodp.S  nodp.c  odpd.c  odpd_init_opt.c  odpd_opt.S  odpd_opt.s  odpd_opt1.c  request_pool.c  result_pool.c  task.c
host/: CMakeLists.txt
host/inc/: accumulateread.h  backends_functions.h  code.h  compare.h  debug.h  dispatch.h  dpu_backend.h  dpus.h  dpus_mgmt.h  genome.h  getread.h  index.h  mapping_file.h  mdpu.h  mram_dpu.h  parse_args.h  processread.h  profiling.h  sam.h  samfile.h  simu_backend.h  upvc.h  upvc_dpu.h  vartree.h  vcf.h  vmi.h
host/src/: Status.md  accumulateread.c  code.c  compare.c  count_compute.c  dispatch.c  dpu_backend.c  dpus.c  dpus_mgmt.c  genome.c  getread.c  index.c  mapping_file.c  mdpu.c  mram_dpu.c  parse_args.c  processread.c  processread.c.old  sam.c  samfile.c  simu_backend.c  upvc.c  upvc_dpu.c  upvc_host.c  vartree.c  vcf.c  vmi.c
inc/: code.h  compare.h  dispatch.h  genome.h  getread.h  index.h  processread.h  vartree.h  vcf.h
object/: readme.txt
src/: code.c  compare.c  genome.c  getread.c  index.c  processread.c  upvc_dpu.c  upvc_host.c  vartree.c  vcf.c
tests/: CMakeLists.txt  GenomeParser.py  chrall_to_mono_chr.c  combineFastq.py  compare.sh  compareVCF.py  csv2svg.c  extract_res.c  extract_trace.c  generate_and_test_all_chr.bash  igvlike-focus.py  moy_time.bash  read_freq_dump.py  seed_txt_2_seed_raw.c  sel_var.py  simchr.bash  simchr_mono.bash  upvclog.py  upvclog2graph.c
